updated: choose car footer

--- a/src/input.css
+++ b/src/input.css
@@ -9,4 +9,6 @@
   --color-primary-color: #173559;
   --color-grey-three: #555555;
   --color-secondary-color: #f6bb3b;
+  --color-green-color: #65b211;
+  --color-blue-color: #1890ff;
 }
