--- a/src/output.css
+++ b/src/output.css
@@ -8,21 +8,24 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-100: oklch(93.6% 0.032 17.717);
+    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
+    --color-green-50: oklch(98.2% 0.018 155.826);
+    --color-green-100: oklch(96.2% 0.044 156.743);
+    --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-500: oklch(55.1% 0.027 264.364);
+    --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-700: oklch(37.3% 0.034 259.733);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-lg: 32rem;
     --container-xl: 36rem;
-    --container-2xl: 42rem;
-    --container-3xl: 48rem;
     --container-4xl: 56rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
@@ -34,8 +37,6 @@
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-light: 300;
@@ -45,7 +46,7 @@
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
     --tracking-wider: 0.05em;
-    --radius-md: 0.375rem;
+    --drop-shadow-sm: 0 1px 2px rgb(0 0 0 / 0.15);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -307,14 +308,14 @@
   .mb-18 {
     margin-bottom: calc(var(--spacing) * 18);
   }
-  .mb-24 {
-    margin-bottom: calc(var(--spacing) * 24);
-  }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
   }
   .ml-10 {
     margin-left: calc(var(--spacing) * 10);
+  }
+  .block {
+    display: block;
   }
   .flex {
     display: flex;
@@ -479,6 +480,9 @@
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
@@ -499,13 +503,6 @@
   }
   .gap-x-6 {
     column-gap: calc(var(--spacing) * 6);
-  }
-  .space-x-3 {
-    :where(& > :not(:last-child)) {
-      --tw-space-x-reverse: 0;
-      margin-inline-start: calc(calc(var(--spacing) * 3) * var(--tw-space-x-reverse));
-      margin-inline-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-x-reverse)));
-    }
   }
   .space-x-4 {
     :where(& > :not(:last-child)) {
@@ -545,9 +542,6 @@
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
-  }
-  .rounded-md {
-    border-radius: var(--radius-md);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -599,6 +593,9 @@
   .border-transparent {
     border-color: transparent;
   }
+  .border-yellow-400 {
+    border-color: var(--color-yellow-400);
+  }
   .border-b-\[\#e8e7e7\] {
     border-bottom-color: #e8e7e7;
   }
@@ -613,6 +610,9 @@
   }
   .bg-\[\#f3f5f6\] {
     background-color: #f3f5f6;
+  }
+  .bg-\[\#f6bb3b1a\] {
+    background-color: #f6bb3b1a;
   }
   .bg-blue-color {
     background-color: var(--color-blue-color);
@@ -793,14 +793,17 @@
   .text-\[\#262626\] {
     color: #262626;
   }
+  .text-\[\#c08300\] {
+    color: #c08300;
+  }
   .text-\[\#ff0000\] {
     color: #ff0000;
   }
+  .text-black {
+    color: var(--color-black);
+  }
   .text-gray-500 {
     color: var(--color-gray-500);
-  }
-  .text-gray-700 {
-    color: var(--color-gray-700);
   }
   .text-grey-four {
     color: var(--color-grey-four);
@@ -816,6 +819,9 @@
   }
   .text-primary-color {
     color: var(--color-primary-color);
+  }
+  .text-red-500 {
+    color: var(--color-red-500);
   }
   .text-red-600 {
     color: var(--color-red-600);
@@ -849,6 +855,11 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
+  }
+  .drop-shadow-sm {
+    --tw-drop-shadow-size: drop-shadow(0 1px 2px var(--tw-drop-shadow-color, rgb(0 0 0 / 0.15)));
+    --tw-drop-shadow: drop-shadow(var(--drop-shadow-sm));
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
@@ -916,6 +927,11 @@
       }
     }
   }
+  .peer-checked\:block {
+    &:is(:where(.peer):checked ~ *) {
+      display: block;
+    }
+  }
   .peer-checked\:border-primary-color {
     &:is(:where(.peer):checked ~ *) {
       border-color: var(--color-primary-color);
@@ -926,9 +942,41 @@
       background-color: var(--color-grey-eight);
     }
   }
-  .peer-checked\:text-white {
+  .peer-checked\:font-bold {
     &:is(:where(.peer):checked ~ *) {
-      color: var(--color-white);
+      --tw-font-weight: var(--font-weight-bold);
+      font-weight: var(--font-weight-bold);
+    }
+  }
+  .peer-checked\:text-primary-color {
+    &:is(:where(.peer):checked ~ *) {
+      color: var(--color-primary-color);
+    }
+  }
+  .peer-checked\/advanced\:block {
+    &:is(:where(.peer\/advanced):checked ~ *) {
+      display: block;
+    }
+  }
+  .peer-checked\/advanced\:border-primary-color {
+    &:is(:where(.peer\/advanced):checked ~ *) {
+      border-color: var(--color-primary-color);
+    }
+  }
+  .peer-checked\/advanced\:font-bold {
+    &:is(:where(.peer\/advanced):checked ~ *) {
+      --tw-font-weight: var(--font-weight-bold);
+      font-weight: var(--font-weight-bold);
+    }
+  }
+  .peer-checked\/advanced\:text-primary-color {
+    &:is(:where(.peer\/advanced):checked ~ *) {
+      color: var(--color-primary-color);
+    }
+  }
+  .peer-checked\/simple\:block {
+    &:is(:where(.peer\/simple):checked ~ *) {
+      display: block;
     }
   }
   .placeholder\:font-light {
@@ -945,11 +993,6 @@
   .checked\:accent-primary-color {
     &:checked {
       accent-color: var(--color-primary-color);
-    }
-  }
-  .checked\:accent-secondary-color {
-    &:checked {
-      accent-color: var(--color-secondary-color);
     }
   }
   .hover\:border-primary-color {
@@ -1004,6 +1047,13 @@
       }
     }
   }
+  .hover\:text-primary-color {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-primary-color);
+      }
+    }
+  }
   .focus\:border-grey-six {
     &:focus {
       border-color: var(--color-grey-six);
@@ -1028,6 +1078,12 @@
   .md\:flex-row {
     @media (width >= 48rem) {
       flex-direction: row;
+    }
+  }
+  .md\:text-base {
+    @media (width >= 48rem) {
+      font-size: var(--text-base);
+      line-height: var(--tw-leading, var(--text-base--line-height));
     }
   }
   .xl\:col-span-1 {
