--- a/src/output.css
+++ b/src/output.css
@@ -566,6 +566,9 @@
       margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
+  .gap-y-2 {
+    row-gap: calc(var(--spacing) * 2);
+  }
   .gap-y-3 {
     row-gap: calc(var(--spacing) * 3);
   }
@@ -663,6 +666,9 @@
   .bg-\[\#0000000f\] {
     background-color: #0000000f;
   }
+  .bg-\[\#1735590d\] {
+    background-color: #1735590d;
+  }
   .bg-\[\#1735591a\] {
     background-color: #1735591a;
   }
@@ -744,6 +750,9 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
+  .px-2\.5 {
+    padding-inline: calc(var(--spacing) * 2.5);
+  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
@@ -776,6 +785,12 @@
   }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
+  }
+  .pt-0 {
+    padding-top: calc(var(--spacing) * 0);
+  }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
@@ -884,8 +899,14 @@
   .text-gray-500 {
     color: var(--color-gray-500);
   }
+  .text-grey-eight {
+    color: var(--color-grey-eight);
+  }
   .text-grey-four {
     color: var(--color-grey-four);
+  }
+  .text-grey-seven {
+    color: var(--color-grey-seven);
   }
   .text-grey-six {
     color: var(--color-grey-six);
@@ -1015,6 +1036,9 @@
   .select-all {
     -webkit-user-select: all;
     user-select: all;
+  }
+  .text-shadow-2xs {
+    text-shadow: 0px 1px 0px var(--tw-text-shadow-color, rgb(0 0 0 / 0.15));
   }
   .group-hover\:visible {
     &:is(:where(.group):hover *) {
@@ -1187,6 +1211,11 @@
   .md\:text-\[15px\] {
     @media (width >= 48rem) {
       font-size: 15px;
+    }
+  }
+  .lg\:w-1\/2 {
+    @media (width >= 64rem) {
+      width: calc(1/2 * 100%);
     }
   }
   .lg\:grid-cols-3 {
@@ -1433,6 +1462,15 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-text-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-text-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -1482,6 +1520,8 @@
       --tw-drop-shadow-size: initial;
       --tw-duration: initial;
       --tw-ease: initial;
+      --tw-text-shadow-color: initial;
+      --tw-text-shadow-alpha: 100%;
     }
   }
 }
