--- a/index.css
+++ b/index.css
@@ -6,9 +6,12 @@
   --grey-two: #333333;
   --grey-six: #cccccc;
   --grey-eight: #f7f7f7;
+  --dark-primary-color: #5444bb;
   --primary-font: "Poppins";
 }
-
+html{
+  transition: all 0.35s;
+}
 /* custom classes */
 
 .grey-eight {
@@ -82,4 +85,10 @@ label {
 /* Show tick when checked */
 .custom-checkbox input[type="checkbox"]:checked + .checkmark::after {
   display: block;
+}
+
+
+.dark .custom-checkbox input[type="checkbox"]:checked + .checkmark {
+  background-color: var(--dark-primary-color);
+  border: 1px solid var(--dark-primary-color);
 }
