--- a/src/output.css
+++ b/src/output.css
@@ -7,21 +7,16 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-50: oklch(97.1% 0.013 17.38);
     --color-red-100: oklch(93.6% 0.032 17.717);
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
-    --color-red-800: oklch(44.4% 0.177 26.899);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
-    --color-blue-500: oklch(62.3% 0.214 259.815);
-    --color-blue-700: oklch(48.8% 0.243 264.376);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-500: oklch(55.1% 0.027 264.364);
-    --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-xs: 20rem;
@@ -63,6 +58,13 @@
     --color-secondary-color: #f6bb3b;
     --color-green-color: #65b211;
     --color-blue-color: #1890ff;
+    --color-dark-primary-color: #5444bb;
+    --color-dark-background-color: #181a1b;
+    --color-dark-grey-four-color: #b0b3b8;
+    --color-dark-grey-two: #e5e7eb;
+    --color-dark-grey-six: #3a3b3c;
+    --color-dark-cards-color: #222124;
+    --color-dark-grey-seven: #23272a;
   }
 }
 @layer base {
@@ -417,6 +419,9 @@
   .w-24 {
     width: calc(var(--spacing) * 24);
   }
+  .w-32 {
+    width: calc(var(--spacing) * 32);
+  }
   .w-44 {
     width: calc(var(--spacing) * 44);
   }
@@ -638,9 +643,6 @@
   }
   .border-primary-color {
     border-color: var(--color-primary-color);
-  }
-  .border-red-800 {
-    border-color: var(--color-red-800);
   }
   .border-transparent {
     border-color: transparent;
@@ -866,8 +868,14 @@
   .text-\[\#ff0000\] {
     color: #ff0000;
   }
+  .text-dark-background-color {
+    color: var(--color-dark-background-color);
+  }
   .text-gray-500 {
     color: var(--color-gray-500);
+  }
+  .text-grey-eight {
+    color: var(--color-grey-eight);
   }
   .text-grey-four {
     color: var(--color-grey-four);
@@ -1145,6 +1153,11 @@
       margin-top: calc(var(--spacing) * 0);
     }
   }
+  .lg\:block {
+    @media (width >= 64rem) {
+      display: block;
+    }
+  }
   .lg\:w-1\/2 {
     @media (width >= 64rem) {
       width: calc(1/2 * 100%);
@@ -1163,6 +1176,11 @@
   .lg\:justify-start {
     @media (width >= 64rem) {
       justify-content: flex-start;
+    }
+  }
+  .lg\:pr-1 {
+    @media (width >= 64rem) {
+      padding-right: calc(var(--spacing) * 1);
     }
   }
   .xl\:col-span-1 {
@@ -1200,9 +1218,9 @@
       grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
-  .xl\:pl-0\.5 {
+  .xl\:pr-1 {
     @media (width >= 80rem) {
-      padding-left: calc(var(--spacing) * 0.5);
+      padding-right: calc(var(--spacing) * 1);
     }
   }
   .xl\:pl-1 {
@@ -1210,9 +1228,162 @@
       padding-left: calc(var(--spacing) * 1);
     }
   }
-  .xl\:pl-3 {
-    @media (width >= 80rem) {
-      padding-left: calc(var(--spacing) * 3);
+  .dark\:border-\[\#23272a\] {
+    &:where(.dark, .dark *) {
+      border-color: #23272a;
+    }
+  }
+  .dark\:border-dark-grey-four-color {
+    &:where(.dark, .dark *) {
+      border-color: var(--color-dark-grey-four-color);
+    }
+  }
+  .dark\:border-dark-grey-seven {
+    &:where(.dark, .dark *) {
+      border-color: var(--color-dark-grey-seven);
+    }
+  }
+  .dark\:border-dark-grey-six {
+    &:where(.dark, .dark *) {
+      border-color: var(--color-dark-grey-six);
+    }
+  }
+  .dark\:border-grey-four {
+    &:where(.dark, .dark *) {
+      border-color: var(--color-grey-four);
+    }
+  }
+  .dark\:bg-\[\#1e3a5c\] {
+    &:where(.dark, .dark *) {
+      background-color: #1e3a5c;
+    }
+  }
+  .dark\:bg-\[\#1f75dd\] {
+    &:where(.dark, .dark *) {
+      background-color: #1f75dd;
+    }
+  }
+  .dark\:bg-\[\#23272a\] {
+    &:where(.dark, .dark *) {
+      background-color: #23272a;
+    }
+  }
+  .dark\:bg-\[\#f6c84b\] {
+    &:where(.dark, .dark *) {
+      background-color: #f6c84b;
+    }
+  }
+  .dark\:bg-dark-background-color {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-dark-background-color);
+    }
+  }
+  .dark\:bg-dark-cards-color {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-dark-cards-color);
+    }
+  }
+  .dark\:bg-dark-primary-color {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-dark-primary-color);
+    }
+  }
+  .dark\:bg-white {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-white);
+    }
+  }
+  .dark\:text-\[\#3a3b3c\] {
+    &:where(.dark, .dark *) {
+      color: #3a3b3c;
+    }
+  }
+  .dark\:text-\[\#181a1b\] {
+    &:where(.dark, .dark *) {
+      color: #181a1b;
+    }
+  }
+  .dark\:text-\[\#d1d5db\] {
+    &:where(.dark, .dark *) {
+      color: #d1d5db;
+    }
+  }
+  .dark\:text-dark-background-color {
+    &:where(.dark, .dark *) {
+      color: var(--color-dark-background-color);
+    }
+  }
+  .dark\:text-dark-grey-four-color {
+    &:where(.dark, .dark *) {
+      color: var(--color-dark-grey-four-color);
+    }
+  }
+  .dark\:text-dark-grey-two {
+    &:where(.dark, .dark *) {
+      color: var(--color-dark-grey-two);
+    }
+  }
+  .dark\:text-grey-seven {
+    &:where(.dark, .dark *) {
+      color: var(--color-grey-seven);
+    }
+  }
+  .dark\:text-white {
+    &:where(.dark, .dark *) {
+      color: var(--color-white);
+    }
+  }
+  .dark\:shadow {
+    &:where(.dark, .dark *) {
+      --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .dark\:shadow-grey-four {
+    &:where(.dark, .dark *) {
+      --tw-shadow-color: #777777;
+      @supports (color: color-mix(in lab, red, red)) {
+        --tw-shadow-color: color-mix(in oklab, var(--color-grey-four) var(--tw-shadow-alpha), transparent);
+      }
+    }
+  }
+  .dark\:drop-shadow-2xl {
+    &:where(.dark, .dark *) {
+      --tw-drop-shadow-size: drop-shadow(0 25px 25px var(--tw-drop-shadow-color, rgb(0 0 0 / 0.15)));
+      --tw-drop-shadow: drop-shadow(var(--drop-shadow-2xl));
+      filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+    }
+  }
+  .dark\:group-hover\:border-dark-primary-color {
+    &:where(.dark, .dark *) {
+      &:is(:where(.group):hover *) {
+        @media (hover: hover) {
+          border-color: var(--color-dark-primary-color);
+        }
+      }
+    }
+  }
+  .dark\:group-hover\:bg-\[\#181a1b\] {
+    &:where(.dark, .dark *) {
+      &:is(:where(.group):hover *) {
+        @media (hover: hover) {
+          background-color: #181a1b;
+        }
+      }
+    }
+  }
+  .dark\:peer-checked\:border-dark-primary-color {
+    &:where(.dark, .dark *) {
+      &:is(:where(.peer):checked ~ *) {
+        border-color: var(--color-dark-primary-color);
+      }
+    }
+  }
+  .dark\:peer-checked\:bg-dark-background-color {
+    &:where(.dark, .dark *) {
+      &:is(:where(.peer):checked ~ *) {
+        background-color: var(--color-dark-background-color);
+      }
     }
   }
 }
